# Rusty-Serial-Visual-Presentation

./: Cargo.toml  README.md
docs/: architecture.md
src/: error.rs  extract.rs  input.rs  lib.rs  main.rs  normalize.rs  playback.rs  rsvp.rs  stream.rs  tokenize.rs  tui.rs
