[package]
name = "rsvp"
version = "0.1.0"
edition = "2024"

[lib]
name = "rsvp"
path = "src/lib.rs"

[[bin]]
name = "rsvp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
epub-parser = "0.3.4"
pdf-extract = "0.10"
pulldown-cmark = "0.12"
ratatui = "0.29"
thiserror = "2.0"
unicode-segmentation = "1.12"
unicode-width = "0.2"

[dev-dependencies]
zip = "2.1"
